--- a/pom.xml
+++ b/pom.xml
@@ -55,7 +55,7 @@
             <groupId>org.elasticsearch</groupId>
             <artifactId>elasticsearch</artifactId>
             <version>${elasticsearch.version}</version>
-            <scope>compile</scope>
+            <scope>provided</scope>
         </dependency>
 
         <dependency>
@@ -86,6 +86,46 @@
             <scope>test</scope>
         </dependency>
     </dependencies>
+	<profiles>
+		<profile>
+			<activation>
+				<os><family>!windows</family></os>
+			</activation>
+			<build>
+				<plugins>
+					<plugin>
+						<groupId>org.codehaus.mojo</groupId>
+						<artifactId>rpm-maven-plugin</artifactId>
+						<version>2.1-alpha-3</version>
+						<extensions>true</extensions>
+						<executions>
+							<execution>
+								<id>attach-rpm</id>
+								<goals>
+									<goal>rpm</goal>
+								</goals>
+							</execution>
+						</executions>
+						<configuration>
+							<copyright>Apache License 2.0</copyright>
+							<group>Application/Internet</group>
+							<defaultFilemode>644</defaultFilemode>
+							<defaultDirmode>755</defaultDirmode>
+							<defaultUsername>root</defaultUsername>
+							<defaultGroupname>root</defaultGroupname>
+							<mappings>
+								<mapping>
+									<directory>/usr/share/elasticsearch/plugins/analysis-stconvert</directory>
+									<dependency/>
+									<artifact/>
+								</mapping>
+							</mappings>
+						</configuration>
+					</plugin>
+				</plugins>
+			</build>
+		</profile>
+	</profiles>
 
     <build>
         <plugins>
